# NetForge_RL

./: .gitignore  404.html  ACTION_COVERAGE.md  AUDIT.md  CITATION.cff  Dockerfile  README.md  ROADMAP.md  audit  changelog.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: python-app.yml
ACTIONS/: index.html
ACTION_COVERAGE/: index.html
AUDIT/: index.html
DATASHEET/: index.html
NetForge_Audit/: index.html
NetForge_Novelty_Analysis/: index.html
ROADMAP/: index.html
api/environment/: index.html
api/nlp/: index.html
api/siem/: index.html
api/sim2real/: index.html
architecture/dynamic_topology/: index.html
architecture/multimodal_obs/: index.html
architecture/nlp_siem/: index.html
architecture/ot_physics/: index.html
architecture/overview/: index.html
architecture/sim2real/: index.html
architecture/zero_trust/: index.html
benchmarks/: baseline_sweep.py  bench_ppo_rollout.py  build_leaderboard.py  competition_eval.py  env_spec.py  eval_jax.py  llm_eval.py  rllib_rmappo.py  run_benchmark.py  self_play.py  serve_vllm.sh  sps_baseline.py  sps_jax_vectorized.py  throughput.py  train_curve.py  train_ippo.py
benchmarks/baselines/: index.html
benchmarks/overview/: index.html
benchmarks/results/: benchmark_heuristic_20260706_133055.json  benchmark_killchain_20260706_133007.json  env_spec.json  env_spec.md  ippo_blue_ransomware.npz  ippo_curve_blue_ransomware.json  leaderboard.json  ppo_rollout.json  sps_baseline.json  sps_jax_action_types.json  sps_jax_vectorized.json  sps_phase1_slice1.json  throughput.json
benchmarks/run/: index.html
benchmarks/self_play/: index.html
changelog/: index.html
cybersec/blue_actions/: index.html
cybersec/overview/: index.html
cybersec/red_actions/: index.html
cybersec/threat_model/: index.html
diagnostics/overview/: index.html
docs/: ACTIONS.md  ACTION_COVERAGE.md  AUDIT.md  DATASHEET.md  NetForge_Audit.md  NetForge_Novelty_Analysis.md  ROADMAP.md  changelog.md  index.md  neurips_audit_report.md  quickstart.md
docs/api/: environment.md  nlp.md  siem.md  sim2real.md
docs/architecture/: nlp_siem.md  overview.md  sim2real.md  zero_trust.md
docs/cybersec/: blue_actions.md  overview.md  red_actions.md  threat_model.md
docs/training/: rllib.md  scenarios.md
environment/difficulty/: index.html
environment/graph_observations/: index.html
environment/reproducibility/: index.html
interop/soc_export/: index.html
leaderboard/: README.md  baselines.json  baselines_summary.json
marl_cyborg/: __init__.py
marl_cyborg/agents/: b_line.py
marl_cyborg/core/: observation.py  state.py
marl_cyborg/environment/: parallel_env.py
marl_cyborg/scenarios/: apt_espionage.py  base_scenario.py  ransomware.py
netforge_rl/actions/: __init__.py  attack_map.py
netforge_rl/agents/: __init__.py  b_line.py  green_agent.py  rule_based_blue.py
netforge_rl/backends/: __init__.py  reference.py
netforge_rl/baselines/: __init__.py  eval.py  jax_ppo.py  policies.py
netforge_rl/bridges/: __init__.py  cleanrl_vec.py  dlpack.py  jaxmarl.py  rllib_bridge.py
netforge_rl/core/: action.py  commands.py  functional.py  graph_obs.py  observation.py  physics.py  registry.py  state.py
netforge_rl/diagnostics/: __init__.py  base.py  capability_card.py  delayed_telemetry.py  false_positive.py  memory_probe.py  noisy_siem.py  ot_kinetic.py  suite.py  topology_shift.py  wrapper.py
netforge_rl/docker_bridge/: __init__.py  bridge.py  docker_hypervisor.py  hypervisor_base.py  mock_hypervisor.py
netforge_rl/environment/: __init__.py  base_env.py  constants.py  curriculum.py  graph_wrapper.py  gym_env.py  metrics.py  observations.py  parallel_env.py  pcap_synthesizer.py  presets.py  spaces.py
netforge_rl/nlp/: log_encoder.py
netforge_rl/notebooks/: 02_visualize_attack.ipynb  03_train_ppo_cleanrl.ipynb  06_custom_scenario.ipynb  07_finetune_llama3_lora.ipynb
netforge_rl/render/: __init__.py  matplotlib_renderer.py  recorder.py  snapshot.py  trajectory.py
netforge_rl/scenarios/: __init__.py  apt_espionage.py  base_scenario.py  cloud_hybrid.py  iot_grid.py  ot_physics.py  ot_stuxnet.py  ransomware.py
netforge_rl/semantic/: __init__.py  action_menu.py  la_wrapper.py  leaderboard.py  modes.py  parser.py  runner.py  vla_wrapper.py
netforge_rl/siem/: correlator.py  event_templates.py  export.py  pcap_synthesizer.py  siem_logger.py
netforge_rl/sim2real/: bridge.py  docker_hypervisor.py
netforge_rl/topologies/: dynamic_topology.py  network_generator.py
notebooks/: 01_quickstart_pytorch.ipynb  02_visualize_attack.ipynb  04_mappo_jax_4000envs.ipynb  05_sim2real_docker.ipynb  07_finetune_llama3_lora.ipynb
quickstart/: index.html
search/: search_index.json
stylesheets/: custom.css
tests/: conftest.py  test_import_order.py
tests/actions/: test_attack_map.py  test_reachability.py
tests/agents/: test_rule_based_blue.py
tests/baselines/: test_baselines.py  test_jax_ppo.py  test_killchain.py  test_train_curve.py
tests/benchmarks/: test_run_benchmark.py  test_self_play.py
tests/bridges/: test_cleanrl_vec.py  test_dlpack.py  test_jaxmarl.py  test_rllib_bridge.py
tests/core/: test_action_base.py  test_functional.py  test_functional_conflicts.py  test_functional_delta.py  test_graph_obs.py  test_observation.py  test_physics.py  test_state.py
tests/diagnostics/: test_capability_card.py  test_capability_probes.py  test_diagnostics.py  test_wrapper.py
tests/docker_bridge/: test_bridge.py  test_bridge_errors.py  test_mock_hypervisor.py
tests/environment/: test_ct_gmarl_env.py  test_curriculum.py  test_deception.py  test_env_dynamics.py  test_green_agent.py  test_gym_env.py  test_pettingzoo_api.py  test_presets.py  test_reset.py  test_step.py  test_telemetry_latency.py  test_ztna_integration.py
tests/nlp/: test_log_encoder.py
tests/parity/: test_envstate_sync.py  test_golden_trajectory.py  test_jax_reference_equivalence.py  test_pure_step_equivalence.py  test_seeded_observation_replay.py  trajectory_fingerprint.py
tests/render/: test_render_pipeline.py
(+73 files in other folders)
