[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netforge_rl"
version = "4.0.0"
description = "Multi-Agent Cybersecurity Simulator based on CybORG"
authors = [
    { name = "marl-Cyborg", email = "igorjankowwski@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "gymnasium>=0.29.1",
    "pettingzoo>=1.24.3",
    "networkx>=3.2.1",
    "pyyaml>=6.0.1",
    "stable-baselines3>=2.3.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "tensorboard>=2.17.0",
    "ruff>=0.3.0",
    "scikit-learn>=1.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]
jax = [
    # CPU build only — install jax[cuda12] or jax[tpu] explicitly for
    # accelerator support. Backends.jax is import-guarded so the legacy
    # PyTorch path keeps working without this extra.
    "jax[cpu]>=0.4.30",
]
render = [
    "matplotlib>=3.8.0",
    "networkx>=3.2.1",
    "moviepy>=2.0.0",  # optional; only required by FrameRecorder.save
]
finetune = [
    # LoRA + PPO fine-tuning of open-weights LLMs. GPU only; the adapter
    # itself is testable without these.
    "torch>=2.3.0",
    "transformers>=4.44.0",
    "trl>=0.9.0",
    "peft>=0.12.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.33.0",
]
pcap = [
    # netforge_rl/environment/pcap_synthesizer.py imports scapy at module
    # top-level. Without this extra, importing the pcap_synthesizer fails.
    "scapy>=2.5.0",
]
sim2real = [
    # netforge_rl/sim2real/docker_hypervisor.py — lazy-imports docker
    # when toggled to 'real' mode against Vulhub containers.
    "docker>=7.0.0",
]
nlp = [
    # Optional dense embedding backend for SIEM log encoding (BERT-style).
    # The default TF-IDF backend (sklearn) requires no extra.
    "sentence-transformers>=2.7.0",
]
llm_clients = [
    # Closed-source API clients for the zero-shot leaderboard
    # (Phase 8 M2). Lazy-imported by the respective client adapters.
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "google-generativeai>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "fast: Mark pure unit tests (< 50ms)",
    "integration: Mark multi-component tests",
    "slow: Mark full env/encoder loops (> 3s)"
]

[tool.ruff]
line-length = 88

target-version = "py312"

[tool.ruff.format]
quote-style = "single"

indent-style = "space"

skip-magic-trailing-comma = false

docstring-code-format = true
docstring-code-line-length = "dynamic"
