[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netforge_rl"
version = "2.2.0"
description = "Multi-Agent Cybersecurity Simulator based on CybORG"
authors = [
    { name = "marl-Cyborg", email = "igorjankowwski@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.0",
    "gymnasium>=1.3.0",
    "pettingzoo>=1.26.1",
    "networkx>=3.4.0",
    "pyyaml>=6.0.2",
    "stable-baselines3>=2.9.0"
]

[project.optional-dependencies]
rllib = [
    "ray[rllib]>=2.9.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "tensorboard>=2.17.0",
    "ruff>=0.3.0",
    "scikit-learn>=1.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]
jax = [
    "jax[cpu]>=0.10.0",
]
render = [
    "matplotlib>=3.8.0",
    "networkx>=3.2.1",
    "moviepy>=2.0.0",
]
finetune = [
    "torch>=2.12.0",
    "transformers>=5.12.0",
    "trl>=0.9.0",
    "peft>=0.12.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.33.0",
]
pcap = [
    "scapy>=2.5.0",
]
docker_bridge = [
    "docker>=7.0.0",
]
nlp = [
    "sentence-transformers>=2.7.0",
]
llm_clients = [
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "google-generativeai>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "fast: Mark pure unit tests (< 50ms)",
    "integration: Mark multi-component tests",
    "slow: Mark full env/encoder loops (> 3s)"
]

[tool.ruff]
line-length = 88

target-version = "py313"

[tool.ruff.format]
quote-style = "single"

indent-style = "space"

skip-magic-trailing-comma = false

docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]
"netforge_rl/semantic/clients/*.py" = ["F401"]
[tool.ruff.lint]
ignore = ["E701", "E402", "E702"]

[tool.setuptools.packages.find]
include = ["netforge_rl*"]
